--- a/app/src/main/res/xml/settings_screen.xml
+++ b/app/src/main/res/xml/settings_screen.xml
@@ -15,6 +15,10 @@
         android:title="Display Name"
         android:summary="Set your Name in Navigation Drawer"/>
 
+    <com.smodj.app.quranplayer.SyncDialog
+        android:title="Sync"
+        android:summary="Update your Quran Library"/>
+
     <Preference
         android:key="@string/aboutBtn"
         android:title="About">
